Fixing header alignment

--- a/irp/src/main/webapp/Shared/irt.css
+++ b/irp/src/main/webapp/Shared/irt.css
@@ -391,6 +391,10 @@
 
 
 
+.divTable-header {
+    display: table;
+    width: 100%;
+}
 
 .divTableCellText, .divTableHead {
     vertical-align: middle;
